--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                 <input type="password" name="password" placeholder="Mot de passe" class="input" required autofocus />
             </div>
             <!-- Boutton de connexion -->
-            <button type="submit" class="bouton bouton-block">CONNEXION</button>
+            <button type="submit" class="bouton bouton-block"><a href="nos-services.html">CONNEXION</a></button>
         </form>
         <!--*** Textes pour les mots de passe oubliés ***-->
         <div class="compte">
