--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <!--## Titre de la page connexion ##-->
     <div class="header">
         <div id="header-sroll">
-            <h1>Bienvenue sur E-pocrate</h1>
+            <h1>Bienvenue sur E-pokrate</h1>
         </div>
     </div>
     <main>
