Page 3 : choisir son médecin

--- a/nos-services.html
+++ b/nos-services.html
@@ -30,7 +30,7 @@
             <!-- Service 1 -->
             <div class="card card-1">
                 <img src="images/Rectangle 56.png" alt="Consultation" width="200" height="200">
-                <button type="submit" class="bouton2 bouton2-block"><a href="#">Consultation</a></button>
+                <button type="submit" class="bouton2 bouton2-block"><a href="choisir-le-medecin.html">Consultation</a></button>
             </div>
             <!-- Service 2 -->
             <div class="card card-2">
