--- a/nos-services.html
+++ b/nos-services.html
@@ -8,7 +8,7 @@
 </head>
 
 <body>
-    <!--## Titre de la page connexion ##-->
+    <!--## Titre de la page : nos services ##-->
     <div class="header2">
         <div id="header-sroll2">
             <h1>Nos services</h1>
