Optimisation du  code CSS pour la page 3

--- a/choisir-le-medecin.html
+++ b/choisir-le-medecin.html
@@ -31,7 +31,7 @@
         <section>
             <!-- Choix 1 -->
             <div class="card card-1">
-                <h2 class="medecin-txt1">Dr DIANGA Donatien</h2>
+                <h2>Dr DIANGA Donatien</h2>
                 <p>Médecin Généraliste</p>
                 <img src="images/Rectangle 56.png" alt="Consultation" width="200" height="200">
                 <h2 class="medecin-txt1">Dr DIANGA Donatien</h2>
@@ -47,7 +47,7 @@
             </div>
             <!-- Choix 2 -->
             <div class="card card-2">
-                <h2 class="medecin-txt1">Dr DIANGA Donatien</h2>
+                <h2>Dr DIANGA Donatien</h2>
                 <p>Médecin Généraliste</p>
                 <img src="images/Rectangle 59.png" alt="Rendez-vous" width="200" height="200">
                 <h2 class="medecin-txt1">Dr DIANGA Donatien</h2>
@@ -63,7 +63,7 @@
             </div>
             <!-- Choix 3 -->
             <div class="card card-3">
-                <h2 class="medecin-txt1">Dr DIANGA Donatien</h2>
+                <h2>Dr DIANGA Donatien</h2>
                 <p>Médecin Généraliste</p>
                 <img src="images/Rectangle 63.png" alt="livraison" width="200" height="200">
                 <h2 class="medecin-txt1">Dr DIANGA Donatien</h2>
@@ -83,7 +83,7 @@
         <section>
             <!-- Choix 1 -->
             <div class="card card-1">
-                <h2 class="medecin-txt1">Dr DIANGA Donatien</h2>
+                <h2>Dr DIANGA Donatien</h2>
                 <p>Médecin Généraliste</p>
                 <img src="images/Rectangle 56.png" alt="Consultation" width="200" height="200">
                 <h2 class="medecin-txt1">Dr DIANGA Donatien</h2>
@@ -99,7 +99,7 @@
             </div>
             <!-- Choix 2 -->
             <div class="card card-2">
-                <h2 class="medecin-txt1">Dr DIANGA Donatien</h2>
+                <h2>Dr DIANGA Donatien</h2>
                 <p>Médecin Généraliste</p>
                 <img src="images/Rectangle 59.png" alt="Rendez-vous" width="200" height="200">
                 <h2 class="medecin-txt1">Dr DIANGA Donatien</h2>
@@ -115,7 +115,7 @@
             </div>
             <!-- Choix 3 -->
             <div class="card card-3">
-                <h2 class="medecin-txt1">Dr DIANGA Donatien</h2>
+                <h2>Dr DIANGA Donatien</h2>
                 <p>Médecin Généraliste</p>
                 <img src="images/Rectangle 63.png" alt="livraison" width="200" height="200">
                 <h2 class="medecin-txt1">Dr DIANGA Donatien</h2>
