--- a/index.html
+++ b/index.html
@@ -7,6 +7,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <link rel="stylesheet" href="css/style.css">
+    <!----------------------- favicon ------------------------------->
+    <link rel="manifest" href="/manifest.json">
+
+    <link rel="icon" href="favicon.ico" type="image/x-icon" />
+    <link rel="apple-touch-icon" href="images/EPK-icon-152x152.png">
+    <meta name="theme-color" content="white" />
+    <meta name="apple-mobile-web-app-capable" content="yes">
+    <meta name="apple-mobile-web-app-status-bar-style" content="black">
+    <meta name="apple-mobile-web-app-title" content="E-POKRATE">
+    <meta name="msapplication-TileImage" content="images/EPK-icon-144x144.png">
+    <meta name="msapplication-TileColor" content="#FFFFFF">
 
 </head>
 
@@ -31,7 +42,7 @@
                 <input type="password" name="password" placeholder="Mot de passe" class="input" required autofocus />
             </div>
 
-            <button type="submit" class="bouton bouton-block"><a href="nos-services.html">CONNEXION</a></button>
+            <button type="submit" class="bouton bouton-block"><a href="#">CONNEXION</a></button>
         </form>
         <!--*** Tout le texte pour s'inscrire ou mot de passe oublié ***-->
         <div class="compte">
