ajout de la page 3 : choisir ce médecin

--- a/nos-services.html
+++ b/nos-services.html
@@ -43,12 +43,12 @@
             <!-- Service 1 -->
             <div class="card card-1">
                 <img src="images/Rectangle 56.png" alt="Consultation" width="80" height="80">
-                <button type="submit" class="bouton2 bouton2-block"><a href="#">Consultation</a></button>
+                <button type="submit" class="bouton2 bouton2-block"><a href="choisir-medecin.html">Consultation</a></button>
             </div>
             <!-- Service 2 -->
             <div class="card card-2">
                 <img src="images/Rectangle 59.png" alt="Rendez-vous" width="80" height="80">
-                <button type="submit" class="bouton2 bouton2-block"><a href="#">Rendez-vous</a></button>
+                <button type="submit" class="bouton2 bouton2-block"><a href="choisir-medecin.html">Rendez-vous</a></button>
             </div>
             <!-- Service 3 -->
             <div class="card card-3">
