--- a/choisir-medecin.html
+++ b/choisir-medecin.html
@@ -30,117 +30,116 @@
     </div>
     <main>
         <!--## Début du main ##-->
-        <!--*** images des services ***
-        <img src="images/img-nos-services.jpg" alt="image de connexion" width="1000" height="300">
-
-        <div class="textes">
-            <h2>Que souhaitez -vous faire ?</h2>
+        <!--*** Les choix de médecin en haut ***-->
+        <div id="tous-les-cards1">
+            <!-- Service 1 -->
+            <div class="card card-1">
+                <h2>Dr DIANGA Donatien</h2>
+                <p class="medg">Médecin Généraliste</p>
+                <img src="images/Rectangle 63.png" class="image-service" alt="Consultation" width="91" height="93">
+                <h3>Hopital Ntchengué</h3>
+                <div class="etoiles">
+                    <span class="fa fa-star checked"></span>
+                    <span class="fa fa-star checked"></span>
+                    <span class="fa fa-star checked"></span>
+                    <span class="fa fa-star checked"></span>
+                    <span class="fa fa-star"></span>
+                </div>
+                <p>87 AVIS CLIENTS</p>
+                <p class="prix">3.000 FCFA</p>
+                <button type="submit" class="bouton2 bouton2-block"><a href="#">Choisir ce Médecin</a></button>
+            </div>
+            <!-- Service 2 -->
+            <div class="card card-2">
+                <h2>Dr BOUKA Hervé</h2>
+                <p class="medg">Pédiatre</p>
+                <img src="images/Rectangle 44.png" class="image-service" alt="Rendez-vous" width="91" height="93">
+                <h3>Clinique Billie</h3>
+                <div class="etoiles">
+                    <span class="fa fa-star checked"></span>
+                    <span class="fa fa-star checked"></span>
+                    <span class="fa fa-star checked"></span>
+                    <span class="fa fa-star checked"></span>
+                    <span class="fa fa-star"></span>
+                </div>
+                <p>156 AVIS CLIENTS</p>
+                <p class="prix">12.000 FCFA</p>
+                <button type="submit" class="bouton2 bouton2-block"><a href="#">Choisir ce Médecin</a></button>
+            </div>
+            <!-- Service 3 -->
+            <div class="card card-3">
+                <h2>Dr NZE Vanessa</h2>
+                <p class="medg">Médecin Généraliste</p>
+                <img src="images/Rectangle 47.png" class="image-service" alt="livraison" width="91" height="93">
+                <h3>Clinique Littoral</h3>
+                <div class="etoiles">
+                    <span class="fa fa-star checked"></span>
+                    <span class="fa fa-star checked"></span>
+                    <span class="fa fa-star checked"></span>
+                    <span class="fa fa-star checked"></span>
+                    <span class="fa fa-star"></span>
+                </div>
+                <p>97 AVIS CLIENTS</p>
+                <p class="prix">5.000 FCFA</p>
+                <button type="submit" class="bouton2 bouton2-block"><a href="#">Choisir ce Médecin</a></button>
+            </div>
         </div>
-        <div class="text-2">
-            <p>Faites vous consulter en ligne , prenez rendez-vous avec un médecin ou faites ou slivrer vos médicaments ou examens...</p>
-        </div>-->
-        <!--*** Les services en haut ***-->
-        <section>
+        <hr>
+        <!--*** Les choix de médecin en bas ***-->
+        <div id="tous-les-cards2">
+            <!--*** Les services en bas ***-->
             <!-- Service 1 -->
             <div class="card card-1">
-                <p>Dr DIANGA Donatien</p>
-                <p>Médecin Généraliste</p>
-                <img src="images/Rectangle 56.png" class="image-service" alt="Consultation" width="80" height="80">
-                <p>Hopital Ntchengué</p>
-                <span class="fa fa-star checked"></span>
-                <span class="fa fa-star checked"></span>
-                <span class="fa fa-star checked"></span>
-                <span class="fa fa-star checked"></span>
-                <span class="fa fa-star"></span>
-                <p>Médecin Généraliste</p>
-                <p>87 AVIS CLIENTS</p>
-                <p>3.000 FCFA</p>
-                <button type="submit" class="bouton2 bouton2-block"><a href="#">Consultation</a></button>
+                <h2>Dr WORA Roland</h2>
+                <p class="medg">Médecin Généraliste</p>
+                <img src="images/Rectangle 48.png" class="image-service" class="image-service" alt="Consultation" width="91" height="93">
+                <h3>Clinique Ayilé</h3>
+                <div class="etoiles">
+                    <span class="fa fa-star checked"></span>
+                    <span class="fa fa-star checked"></span>
+                    <span class="fa fa-star checked"></span>
+                    <span class="fa fa-star checked"></span>
+                    <span class="fa fa-star"></span>
+                </div>
+                <p>56 AVIS CLIENTS</p>
+                <p class="prix">3.000 FCFA</p>
+                <button type="submit" class="bouton2 bouton2-block"><a href="#">Choisir ce Médecin</a></button>
             </div>
             <!-- Service 2 -->
             <div class="card card-2">
-                <p>Dr DIANGA Donatien</p>
-                <p>Médecin Généraliste</p>
-                <img src="images/Rectangle 59.png" class="image-service" alt="Rendez-vous" width="80" height="80">
-                <p>Hopital Ntchengué</p>
-                <span class="fa fa-star checked"></span>
-                <span class="fa fa-star checked"></span>
-                <span class="fa fa-star checked"></span>
-                <span class="fa fa-star checked"></span>
-                <span class="fa fa-star"></span>
-                <p>Médecin Généraliste</p>
-                <p>87 AVIS CLIENTS</p>
-                <p>3.000 FCFA</p>
-                <button type="submit" class="bouton2 bouton2-block"><a href="#">Rendez-vous</a></button>
+                <h2>Dr OBONE Denise</h2>
+                <p class="medg">Médecin Généraliste</p>
+                <img src="images/Rectangle 49.png" class="image-service" alt="Rendez-vous" width="91" height="93">
+                <h3>PMI Balise</h3>
+                <div class="etoiles">
+                    <span class="fa fa-star checked"></span>
+                    <span class="fa fa-star checked"></span>
+                    <span class="fa fa-star checked"></span>
+                    <span class="fa fa-star checked"></span>
+                    <span class="fa fa-star"></span>
+                </div>
+                <p>98 AVIS CLIENTS</p>
+                <p class="prix">5.000 FCFA</p>
+                <button type="submit" class="bouton2 bouton2-block"><a href="#">Choisir ce Médecin</a></button>
             </div>
             <!-- Service 3 -->
             <div class="card card-3">
-                <p>Dr DIANGA Donatien</p>
-                <p>Médecin Généraliste</p>
-                <img src="images/Rectangle 63.png" class="image-service" alt="livraison" width="80" height="80">
-                <p>Hopital Ntchengué</p>
-                <span class="fa fa-star checked"></span>
-                <span class="fa fa-star checked"></span>
-                <span class="fa fa-star checked"></span>
-                <span class="fa fa-star checked"></span>
-                <span class="fa fa-star"></span>
-                <p>Médecin Généraliste</p>
-                <p>87 AVIS CLIENTS</p>
-                <p>3.000 FCFA</p>
-                <button type="submit" class="bouton2 bouton2-block"><a href="#">Livraison</a></button>
+                <h2>Dr DUPONT Nicolas</h2>
+                <p class="medg">Médecin Généraliste</p>
+                <img src="images/Rectangle 50.png" class="image-service" alt="livraison" width="91" height="93">
+                <h3>Clinique La Rose</h3>
+                <div class="etoiles">
+                    <span class="fa fa-star checked"></span>
+                    <span class="fa fa-star checked"></span>
+                    <span class="fa fa-star checked"></span>
+                    <span class="fa fa-star checked"></span>
+                    <span class="fa fa-star"></span>
+                </div>
+                <p>54 AVIS CLIENTS</p>
+                <p class="prix">8.000 FCFA</p>
+                <button type="submit" class="bouton2 bouton2-block"><a href="#">Choisir ce Médecin</a></button>
             </div>
-        </section>
-        <!--*** Les services en bas ***-->
-        <section>
-            <!-- Service 1 -->
-            <div class="card card-1">
-                <p>Dr DIANGA Donatien</p>
-                <p>Médecin Généraliste</p>
-                <img src="images/Rectangle 56.png" class="image-service" class="image-service" alt="Consultation" width="80" height="80">
-                <p>Hopital Ntchengué</p>
-                <span class="fa fa-star checked"></span>
-                <span class="fa fa-star checked"></span>
-                <span class="fa fa-star checked"></span>
-                <span class="fa fa-star checked"></span>
-                <span class="fa fa-star"></span>
-                <p>Médecin Généraliste</p>
-                <p>87 AVIS CLIENTS</p>
-                <p>3.000 FCFA</p>
-                <button type="submit" class="bouton2 bouton2-block"><a href="#">Consultation</a></button>
-            </div>
-            <!-- Service 2 -->
-            <div class="card card-2">
-                <p>Dr DIANGA Donatien</p>
-                <p>Médecin Généraliste</p>
-                <img src="images/Rectangle 59.png" class="image-service" alt="Rendez-vous" width="80" height="80">
-                <p>Hopital Ntchengué</p>
-                <span class="fa fa-star checked"></span>
-                <span class="fa fa-star checked"></span>
-                <span class="fa fa-star checked"></span>
-                <span class="fa fa-star checked"></span>
-                <span class="fa fa-star"></span>
-                <p>Médecin Généraliste</p>
-                <p>87 AVIS CLIENTS</p>
-                <p>3.000 FCFA</p>
-                <button type="submit" class="bouton2 bouton2-block"><a href="#">Rendez-vous</a></button>
-            </div>
-            <!-- Service 3 -->
-            <div class="card card-3">
-                <p>Dr DIANGA Donatien</p>
-                <p>Médecin Généraliste</p>
-                <img src="images/Rectangle 63.png" class="image-service" alt="livraison" width="80" height="80">
-                <p>Hopital Ntchengué</p>
-                <span class="fa fa-star checked"></span>
-                <span class="fa fa-star checked"></span>
-                <span class="fa fa-star checked"></span>
-                <span class="fa fa-star checked"></span>
-                <span class="fa fa-star"></span>
-                <p>Médecin Généraliste</p>
-                <p>87 AVIS CLIENTS</p>
-                <p>3.000 FCFA</p>
-                <button type="submit" class="bouton2 bouton2-block"><a href="#">Livraison</a></button>
-            </div>
-        </section>
+        </div>
     </main>
 </body>
 
