--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
     <title>E-POKRATE</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <link rel="stylesheet" href="css/style.css">
+    <!---<link rel="stylesheet" href="css/style.css">--->
+    <link rel="stylesheet" href="css/main.css">
     <!----------------------- favicon ------------------------------->
     <link rel="manifest" href="/manifest.json">
 
@@ -34,26 +35,15 @@
             <h2>Connectez-vous</h2>
             <p>Connectez-vous à l’aide de vos identifiants et mot de passe pour commencer à utiliser l’application</p>
         </div>
-        <form>
-            <div>
-                <input type="text" name="mail" placeholder="Identifiant ou adresse e-mail" class="input" required autofocus />
-            </div>
-            <div>
-                <input type="password" name="password" placeholder="Mot de passe" class="input" required autofocus />
-            </div>
-
-            <button type="submit" class="bouton bouton-block"><a href="nos-services.html">CONNEXION</a></button>
-        </form>
-        <!--*** Tout le texte pour s'inscrire ou mot de passe oublié ***-->
-        <div class="compte">
-            <p>
-                <a href="#"> <span>Mot de passe oublié ?</span></a>
-            </p>
-        </div><br>
-        <div class="compte">
+        <div id="les-boutons">
+            <button type="submit" class="bouton1 bouton-block"><a href="connexion.html">PARTICULIERS</a></button>
+            <button type="submit" class="bouton1-2 bouton-block"><a href="connexion.html">MEDECINS</a></button>
+        </div>
+        <br>
+        <br>
+        <div class="compte ">
             <p><a href="#">Vous n’avez pas encore de compte ? <span>&vert; Enregistrez-vous</span></a></p>
         </div>
-
         <!--## Fin du main ##-->
     </main>
     <!--File main.js -->
