Ajout du formulaire pour le compte du patient

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
             <p>Connectez-vous à l’aide de vos identifiants et mot de passe pour commencer à utiliser l’application</p>
         </div>
         <div id="les-boutons">
-            <button type="submit" class="bouton1 bouton-block"><a href="connexion.html">PARTICULIERS</a></button>
+            <button type="submit" class="bouton1 bouton-block"><a href="formulaire-patient.html">PARTICULIERS</a></button>
             <button type="submit" class="bouton1-2 bouton-block"><a href="connexion.html">MEDECINS</a></button>
         </div>
         <br>
