Ajout de la page 4 : demande de consultation

--- a/choisir-medecin.html
+++ b/choisir-medecin.html
@@ -47,7 +47,7 @@
                 </div>
                 <p>87 AVIS CLIENTS</p>
                 <p class="prix">3.000 FCFA</p>
-                <button type="submit" class="bouton2 bouton2-block"><a href="#">Choisir ce Médecin</a></button>
+                <button type="submit" class="bouton2 bouton2-block"><a href="demande-de-consultation.html">Choisir ce Médecin</a></button>
             </div>
             <!-- Service 2 -->
             <div class="card card-2">
@@ -64,7 +64,7 @@
                 </div>
                 <p>156 AVIS CLIENTS</p>
                 <p class="prix">12.000 FCFA</p>
-                <button type="submit" class="bouton2 bouton2-block"><a href="#">Choisir ce Médecin</a></button>
+                <button type="submit" class="bouton2 bouton2-block"><a href="demande-de-consultation.html">Choisir ce Médecin</a></button>
             </div>
             <!-- Service 3 -->
             <div class="card card-3">
@@ -81,7 +81,7 @@
                 </div>
                 <p>97 AVIS CLIENTS</p>
                 <p class="prix">5.000 FCFA</p>
-                <button type="submit" class="bouton2 bouton2-block"><a href="#">Choisir ce Médecin</a></button>
+                <button type="submit" class="bouton2 bouton2-block"><a href="demande-de-consultation.html">Choisir ce Médecin</a></button>
             </div>
         </div>
         <hr>
@@ -103,7 +103,7 @@
                 </div>
                 <p>56 AVIS CLIENTS</p>
                 <p class="prix">3.000 FCFA</p>
-                <button type="submit" class="bouton2 bouton2-block"><a href="#">Choisir ce Médecin</a></button>
+                <button type="submit" class="bouton2 bouton2-block"><a href="demande-de-consultation.html">Choisir ce Médecin</a></button>
             </div>
             <!-- Service 2 -->
             <div class="card card-2">
@@ -120,7 +120,7 @@
                 </div>
                 <p>98 AVIS CLIENTS</p>
                 <p class="prix">5.000 FCFA</p>
-                <button type="submit" class="bouton2 bouton2-block"><a href="#">Choisir ce Médecin</a></button>
+                <button type="submit" class="bouton2 bouton2-block"><a href="demande-de-consultation.html">Choisir ce Médecin</a></button>
             </div>
             <!-- Service 3 -->
             <div class="card card-3">
@@ -137,7 +137,7 @@
                 </div>
                 <p>54 AVIS CLIENTS</p>
                 <p class="prix">8.000 FCFA</p>
-                <button type="submit" class="bouton2 bouton2-block"><a href="#">Choisir ce Médecin</a></button>
+                <button type="submit" class="bouton2 bouton2-block"><a href="demande-de-consultation.html">Choisir ce Médecin</a></button>
             </div>
         </div>
     </main>
