--- a/index.html
+++ b/index.html
@@ -6,18 +6,18 @@
     <title>e-POKRATE</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <link rel="stylesheet" href="css/style.css">
-    <link rel="stylesheet" href="css/message.css">
+    <link rel="stylesheet" href="./assets/css/style.css">
+    <link rel="stylesheet" href="./assets/css/message.css">
     <!----------------------- favicon ------------------------------->
-    <link rel="manifest" href="/manifest.json">
+    <link rel="manifest" href="./assets/manifest.json">
 
-    <link rel="icon" href="favicon.ico" type="image/x-icon" />
-    <link rel="apple-touch-icon" href="images/EPK-icon-152x152.png">
+    <link rel="icon" href="./assets/favicon.ico" type="image/x-icon" />
+    <link rel="apple-touch-icon" href="./assets/images/EPK-icon-152x152.png">
     <meta name="theme-color" content="white" />
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="black">
     <meta name="apple-mobile-web-app-title" content="E-POKRATE">
-    <meta name="msapplication-TileImage" content="images/EPK-icon-144x144.png">
+    <meta name="msapplication-TileImage" content="./assets/images/EPK-icon-144x144.png">
     <meta name="msapplication-TileColor" content="#FFFFFF">
 
 </head>
@@ -27,7 +27,7 @@
     <div class="surPC">
         <!--* LOGO E-POKRATE sur PC *-->
         <div class="title-icon">
-            <img src="images/Logo page de Bienvenue.png">
+            <img src="./assets/images/Logo page de Bienvenue.png">
         </div>
         <!--* Messages d'information sur PC *-->
         <h3>
@@ -53,7 +53,7 @@
         <div class="accueil">
             <!--* LOGO E-POKRATE sur PC *-->
             <div class="accueil_Logo">
-                <img src="images/Logo page de Bienvenue.png">
+                <img src="./assets/images/Logo page de Bienvenue.png">
             </div>
             <!--* Messages d'accueil *-->
             <h3>
@@ -74,7 +74,7 @@
         </p>
     </div>
     <!--File main.js -->
-    <script src="js/main.js"></script>
+    <script src="./assets/js/main.js"></script>
 </body>
 
 </html>
