optimisation du code

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="./assets/css/style.css">
     <link rel="stylesheet" href="./assets/css/message.css">
     <!----------------------- favicon ------------------------------->
-    <link rel="manifest" href="./assets/manifest.json">
+    <link rel="manifest" href="/manifest.json">
 
     <link rel="icon" href="./assets/favicon.ico" type="image/x-icon" />
     <link rel="apple-touch-icon" href="./assets/images/EPK-icon-152x152.png">
