Ajout de la page 2 ; nos services

--- a/index.html
+++ b/index.html
@@ -61,8 +61,8 @@
             </h3>
             <!--* Boutons d'inscription *-->
             <div id="les-boutons">
-                <button type="submit" class="bouton1 bouton-block"><a href="#">INSCRIPTION/CONNEXION</a></button>
-                <button type="submit" class="bouton1-2 bouton-block"><a href="#">SE CONNECTER</a></button>
+                <button type="submit" class="bouton1 bouton-block"><a href="pages/nos-services.html">INSCRIPTION/CONNEXION</a></button>
+                <button type="submit" class="bouton1-2 bouton-block"><a href="pages/nos-services.html">SE CONNECTER</a></button>
             </div>
         </div>
         <!--* Les conditions d'inscription *-->
