ajout de la page 3 : choisir un médecin

--- a/pages/nos-services.html
+++ b/pages/nos-services.html
@@ -7,6 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <link rel="stylesheet" href="../css/pages.css">
+    <link rel="stylesheet" href="../css/message.css">
 
     <!----------------------- favicon ------------------------------->
     <link rel="manifest" href="/manifest.json">
@@ -22,6 +23,21 @@
 </head>
 
 <body>
+    <!----- Début de l'affichage sur PC ----->
+    <div class="surPC">
+        <!--* LOGO E-POKRATE sur PC *-->
+        <div class="title-icon">
+            <img src="../images/Logo page de Bienvenue.png">
+        </div>
+        <!--* Messages d'information sur PC *-->
+        <h3>
+            Cher utilisateur, nous vous informons que la version pilote de ce projet n'est disponible que sur mobile.
+        </h3>
+        <p>
+            Nous vous remercions pour l'intérêt que vous portez à notre plateforme.
+        </p>
+    </div>
+    <!-------- Fin de l'affichage sur PC  -------->
     <!--## Titre de la page : nos services ##-->
     <div class="header">
         <div id="header-sroll">
