Ajout des icones

--- a/index.html
+++ b/index.html
@@ -61,8 +61,8 @@
             </h3>
             <!--* Boutons d'inscription *-->
             <div id="les-boutons">
-                <button type="submit" class="bouton1 bouton-block"><a href="pages/patient/nos-services.html">CRÉER UN COMPTE</a></button>
-                <button type="submit" class="bouton1-2 bouton-block"><a href="pages/patient/nos-services.html">SE CONNECTER</a></button>
+                <button type="submit" class="bouton1 bouton-block"><a href="pages/patient/page-connexion.html">CRÉER UN COMPTE</a></button>
+                <button type="submit" class="bouton1-2 bouton-block"><a href="pages/patient/page-connexion.htmls">SE CONNECTER</a></button>
             </div>
         </div>
         <!--* Les conditions d'inscription
