--- a/pages/patient/nos-services.html
+++ b/pages/patient/nos-services.html
@@ -72,12 +72,12 @@
             </div>
             <!-- Service 2 -->
             <div class="card card-2">
-                <img src="../../images/icons/Icône_Rendez.png" alt="Rendez-vous" width="80" height="80">
+                <img src="../../images/icons/IconeRendezvous.png" alt="Rendez-vous" width="80" height="80">
                 <button type="submit" class="bouton2 bouton2-block"><a href="choisir-medecin.html">Rendez-vous</a></button>
             </div>
             <!-- Service 3 -->
             <div class="card card-3">
-                <img src="../../images/icons/Icône_Livraison.png" alt="livraison" width="80" height="80">
+                <img src="../../images/icons/IconeLivraison.png" alt="livraison" width="80" height="80">
                 <button type="submit" class="bouton2 bouton2-block"><a href="#">Livraison</a></button>
             </div>
         </section>
