--- a/pages/patient/page-connexion.html
+++ b/pages/patient/page-connexion.html
@@ -71,7 +71,7 @@
             </form>
             <!--* Boutons d'inscription *-->
             <div id="les-boutons">
-                <button type="submit" class="bouton1 bouton-block"><a href="#">CONNEXION</a></button>
+                <button type="submit" class="bouton1 bouton-block"><a href="nos-services.html">CONNEXION</a></button>
                 <!--*<button type="submit" class="bouton1-2 bouton-block"><a href="#">SE CONNECTER</a></button>*-->
             </div>
         </div>
