Optimisation du css : paiement

--- a/pages/patient/paiement.html
+++ b/pages/patient/paiement.html
@@ -81,7 +81,7 @@
                     <p class="montant-a-payer">Montant à Payer :</p>
                 </div>
                 <div class="textpaye">
-                    <p class="montant-a-payer2">Consultation Dr Donatien</p>
+                    <p class="montant-a-payer2">Consultation Dr IKWAKWA</p>
                 </div>
                 <div class="textpaye">
                     <p class="montant-a-payer3">Service E-pokrate</p>
