Liaison des boutons choisir : choisir un médecin

--- a/pages/patient/choisir-medecin.html
+++ b/pages/patient/choisir-medecin.html
@@ -75,7 +75,7 @@
             <!-- 3 -->
             <div class="cnamgsetbouton">
                 <img src="../../images/img-EPK2_CNAMGS.png" alt="Consultation" class="CNAMGS" width="80" height="80">
-                <button type="submit" class="bouton3-2 bouton-block"><a href="#">Choisir</a></button>
+                <button type="submit" class="bouton3-2 bouton-block"><a href="paiement.html">Choisir</a></button>
             </div>
         </div>
         <br>
@@ -101,7 +101,7 @@
             <!-- 3 -->
             <div class="cnamgsetbouton">
                 <img src="../../images/img-EPK2_CNAMGS.png" alt="Consultation" class="CNAMGS" width="80" height="80">
-                <button type="submit" class="bouton3-2 bouton-block"><a href="#">Choisir</a></button>
+                <button type="submit" class="bouton3-2 bouton-block"><a href="paiement.html">Choisir</a></button>
             </div>
         </div>
         <br>
@@ -127,7 +127,7 @@
             <!-- 3 -->
             <div class="cnamgsetbouton">
                 <img src="../../images/img-EPK2_CNAMGS.png" alt="Consultation" class="CNAMGS" width="80" height="80">
-                <button type="submit" class="bouton3-2 bouton-block"><a href="#">Choisir</a></button>
+                <button type="submit" class="bouton3-2 bouton-block"><a href="paiement.html">Choisir</a></button>
             </div>
         </div>
         <br>
@@ -153,7 +153,7 @@
             <!-- 3 -->
             <div class="cnamgsetbouton">
                 <img src="../../images/img-EPK2_CNAMGS.png" alt="Consultation" class="CNAMGS" width="80" height="80">
-                <button type="submit" class="bouton3-2 bouton-block"><a href="#">Choisir</a></button>
+                <button type="submit" class="bouton3-2 bouton-block"><a href="paiement.html">Choisir</a></button>
             </div>
         </div>
         <br>
